XParty Extension Search: Improved layout issue with long text descriptions.

--- a/client/custom/extension_search/css/banner.css
+++ b/client/custom/extension_search/css/banner.css
@@ -5,21 +5,19 @@ html, body {
     border-bottom: 1px solid #888;
 }
 
-#col1 {
-    float: left; 
-    width: 180px; 
-    margin: 15px;
-}
-
-#col2 {
+#logo {
     float: left;
-    margin: 15px 15px 15px 0px;
+    margin: 15px 0px 15px 10px;
 }
 
 #msg, .note {
     font-size: 10pt;
     color: #888888;
     margin-top: 10px;
+}
+
+#task_area {
+    margin: 15px 15px 15px 200px;
 }
 
 #task_description {
